<resources>
    <string name="app_name">Chemind</string>
    <string name="title_login">Login</string>
    <string name="btn_login">LOGIN</string>
    <string name="title_channel">Channel</string>
    <string name="title_create_channel">Create Channel</string>
    <string name="title_profile">Profile</string>
    <string name="title_create_task">Create Task</string>
    <string name="button_back">Button Back</string>
    <string name="tasks">Tasks</string>
    <string name="search_task">Search Task</string>
    <string name="my_task_list">My Task List</string>
    <string name="task_date">Friday, September 30th 2022</string>
    <string name="task_author">Created By %s</string>
    <string name="todo">Task</string>
    <string name="deadline">Deadline</string>
    <string name="user">Bagus Azaria Buchori Siregar</string>
    <string name="Email">kelompok7@gmail.com</string>
    <string name="logout">LOGOUT</string>
    <string name="register">REGISTER</string>
    <string name="login">Login</string>
    <string name="sign_up">Don\'t Have an Account? <b>Sign Up</b></string>
    <string name="chemind">Chemind</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="task_list_title">My Task List</string>
    <string name="button_next">Button Next</string>
    <string name="channel_name">Enter Your Channel Name</string>
    <string name="search_channel">Search Channel</string>
    <string name="fab_add">Floating Action Button Add</string>
    <string name="fab_check">Floating Action Button Check</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tv_login">Already Have Account? <b>Login</b></string>
    <string name="app_logo">App Logo</string>
</resources>