<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="103dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="20dp"
    android:elevation="4dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <RadioButton
            android:id="@+id/rbTask"
            android:layout_width="36dp"
            android:layout_height="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/my_task_list"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/rbTask"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTaskDate"
            android:text="@string/task_date"
            android:textSize="11sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@+id/rbTask"
            app:layout_constraintTop_toBottomOf="@id/tvTaskTitle"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTaskAuthor"
            android:text="@string/task_author"
            android:textSize="11sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvTaskDate"
            app:layout_constraintStart_toEndOf="@+id/rbTask"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>